--- a/css/style.css
+++ b/css/style.css
@@ -1112,7 +1112,7 @@ display: inline-block;
 }
 
 .card__image--oatava {
-  background-image: url(https://static.wixstatic.com/media/c69cc9_b8d90639053a49359717c648682e8417~mv2_d_2250_3000_s_2.jpg/v1/fill/w_1398,h_1398,al_c,q_85,usm_0.66_1.00_0.01/c69cc9_b8d90639053a49359717c648682e8417~mv2_d_2250_3000_s_2.webp);
+  background-image: url('../images/oatava.png');
 }
 
 .card__image--panyizsuzsi {
