--- a/css/style.css
+++ b/css/style.css
@@ -151,6 +151,25 @@ p 	{
 	}
 }
 
+.bigger-p-2 	{
+	text-decoration: none;
+	font-weight: 300;
+	font-size: 16px;
+	line-height: 22px;
+	color: var(--Med-emp);
+}
+
+@media (min-width: 48em) {
+	.bigger-p-2 	{
+		text-decoration: none;
+		/* font-size: 20px;
+		line-height: 28px; */
+		font-size: 20px;
+		line-height: 32px;
+		color: var(--Med-emp);
+	}
+}
+
 .about-container{
 	padding-left: 24px;
 	padding-right: 24px;
