--- a/css/style.css
+++ b/css/style.css
@@ -1896,7 +1896,7 @@ footer a:hover{
 	padding: 56px 16px 56px 16px;
 }
 
-.footer-text{ */
+.footer-text{ 
 	color: var(--Med-emp);
 	text-align: center;
 	display: block;
