--- a/css/style.css
+++ b/css/style.css
@@ -1383,7 +1383,8 @@ display: inline-block;
 }
 
 .card__image--nove {
-  background-image: url(https://scontent-dub4-1.xx.fbcdn.net/v/t31.0-8/23157007_1875616052453010_1059268769223199914_o.jpg?_nc_cat=110&_nc_sid=19026a&_nc_oc=AQmugVvM32Wj6qW05ZGtYNpX7eWBrNsJpBdRzjZdYgscCQ_Z3OWySc8Raf7ViXrVLnH0v9UR3Tgs3vSaOkim5MU4&_nc_ht=scontent-dub4-1.xx&oh=8a13c274e0231134c70338ec327d63de&oe=5ED5B031);
+		  background-image: url('../images/nove.jpg');
+  /* background-image: url(https://scontent-dub4-1.xx.fbcdn.net/v/t31.0-8/23157007_1875616052453010_1059268769223199914_o.jpg?_nc_cat=110&_nc_sid=19026a&_nc_oc=AQmugVvM32Wj6qW05ZGtYNpX7eWBrNsJpBdRzjZdYgscCQ_Z3OWySc8Raf7ViXrVLnH0v9UR3Tgs3vSaOkim5MU4&_nc_ht=scontent-dub4-1.xx&oh=8a13c274e0231134c70338ec327d63de&oe=5ED5B031); */
 }
 
 .card__image--plantethics {
